--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+.vscode
+package-lock.json
+
 # dependencies
 /node_modules
 /.pnp
@@ -23,3 +26,4 @@ yarn-debug.log*
 yarn-error.log*
 
 .vscode
+package-lock.json
